--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7668,9 +7668,10 @@ body {
   overflow-x: hidden; }
 
 nav {
+  height: 100px;
   background-color: #0F0D1E;
-  display: fixed;
-  z-index: -1; }
+  position: fixed;
+  width: 100%; }
   nav .right-side-nav {
     display: flex;
     align-items: center;
@@ -7694,15 +7695,6 @@ nav {
       nav .right-side-nav .links ul li {
         margin-right: 20px;
         position: relative; }
-        nav .right-side-nav .links ul li:hover ul {
-          display: block;
-          border-radius: 8px;
-          height: 1000px li;
-            height-margin-bottom: 10px;
-            height-height: 1000px; }
-          nav .right-side-nav .links ul li:hover ul a {
-            color: black;
-            display: inline-block; }
         nav .right-side-nav .links ul li ul {
           position: absolute;
           height: auto;
@@ -7728,6 +7720,17 @@ header {
     bottom: 0px;
     right: 0px;
     width: 60%; }
+  header .book {
+    width: 100px;
+    height: 100px; }
+    header .book a {
+      text-decoration: none;
+      color: white;
+      padding: 16px 32px;
+      font-size: 17px;
+      background-color: #5B35D5;
+      border: 1px solid transparent;
+      border-radius: 8px; }
   header .left-side {
     margin-top: 90px; }
     header .left-side h1 {
@@ -7792,13 +7795,12 @@ header {
     background-color: #1B1733;
     border-radius: 16px;
     padding: 50px;
-    padding-bottom: 50px; }
+    margin-bottom: 100px; }
     .section-three-global .section3-three .asd .sec {
       padding-top: 100px; }
     .section-three-global .section3-three .asd .heading-eyebrow {
       color: #ff9a83;
       font-weight: 500;
-      text-transform: uppercase;
       font-size: 18px; }
     .section-three-global .section3-three .asd .heading-small {
       font-size: 33px;
@@ -7818,3 +7820,150 @@ header {
     width: 100%;
     border-radius: 32px;
     padding-top: 70px; }
+
+.section4 {
+  background-color: #1B1734;
+  color: white;
+  display: flex; }
+  .section4 h2 {
+    text-align: center;
+    font-size: 48px;
+    margin-bottom: 24px;
+    margin-top: 100px;
+    font-weight: 600; }
+  .section4 h3 {
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 24px; }
+  .section4 .text6 {
+    margin-bottom: 100px; }
+    .section4 .text6 .p-div {
+      margin-right: 111px; }
+      .section4 .text6 .p-div p {
+        text-align: left;
+        color: #ACA9BE; }
+  .section4 .book {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto; }
+    .section4 .book a {
+      text-decoration: none;
+      color: white;
+      padding: 16px 32px;
+      font-size: 17px;
+      background-color: #5B35D5;
+      border: 1px solid transparent;
+      border-radius: 8px; }
+
+.section-build {
+  background-color: #0F0D1E;
+  text-align: center;
+  color: white; }
+  .section-build h2 {
+    margin-top: 100px;
+    padding: 10px  211px;
+    font-size: 35px; }
+  .section-build a {
+    text-decoration: none;
+    color: white;
+    padding: 16px 32px;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    font-size: 17px;
+    background-color: #5B35D5;
+    border: 1px solid transparent;
+    border-radius: 8px; }
+
+.section-latest {
+  background-color: #1B1734;
+  color: white; }
+  .section-latest .book {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto; }
+    .section-latest .book a {
+      text-decoration: none;
+      color: white;
+      padding: 16px 32px;
+      font-size: 17px;
+      background-color: #5B35D5;
+      border: 1px solid transparent;
+      border-radius: 8px; }
+  .section-latest .start h2 {
+    margin-top: 100px;
+    text-align: center; }
+  .section-latest .sec1 {
+    width: 350px; }
+    .section-latest .sec1 .img {
+      position: relative;
+      width: 100%;
+      z-index: 1; }
+      .section-latest .sec1 .img img {
+        width: 100%; }
+    .section-latest .sec1 .img1-text {
+      width: 190px;
+      height: 32px;
+      position: absolute;
+      bottom: 10px;
+      left: 20px;
+      margin: 0 auto;
+      text-align: center;
+      background-color: #5B35D5;
+      border-radius: 4px; }
+    .section-latest .sec1 h2 {
+      margin-top: 32px;
+      padding-right: 32px;
+      padding-left: 32px;
+      font-size: 20px;
+      color: white; }
+    .section-latest .sec1 .homepage {
+      padding-right: 32px;
+      padding-left: 32px;
+      font-size: 16px;
+      color: #ADAABF; }
+    .section-latest .sec1 .text-block-3 {
+      margin-left: 50px;
+      color: #ADAABF; }
+
+footer {
+  background-color: #0F0D1E; }
+  footer ul {
+    text-align: left;
+    margin-left: -30px; }
+    footer ul li {
+      margin-bottom: 15px; }
+      footer ul li a {
+        text-decoration: none;
+        text-align: center;
+        color: white; }
+        footer ul li a:hover {
+          color: white;
+          text-decoration-line: underline; }
+  footer .resource {
+    margin-top: 15px; }
+  footer .legal {
+    margin-bottom: -38px; }
+  footer h2 {
+    margin-top: 50px;
+    font-size: 18px; }
+  footer .text {
+    text-align: center;
+    font-size: 20px; }
+  footer .icon-footer {
+    text-align: center;
+    font-size: 23px; }
+  footer .right-side h2 {
+    margin-bottom: 25px; }
+  footer .right-side input {
+    height: 48px;
+    border-radius: 4px;
+    font: 17px;
+    margin-bottom: 16px;
+    font-weight: 400;
+    width: 100%;
+    padding: 5px; }
+  footer .right-side .end-input {
+    width: 32%;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    background-color: #5B35D5; }
