--- a/assets/sass/pages/_index.scss
+++ b/assets/sass/pages/_index.scss
@@ -632,6 +632,7 @@ height: 100px;
 
 .page_country{
     background-color: #0F0D1E;
+    color: white;
 h1{
     margin-top: 100px;
 }
@@ -663,6 +664,7 @@ h1{
         }
     }
 }
+
 .after_co_list{
     background-color:#0F0D1E;
     // margin: 0 auto;
@@ -675,11 +677,200 @@ text-align: center;
         margin-bottom: 50px;
     }
 a{
-    border-radius: 8px;
+    border-radius:6px;
     border:1px solid transparent;
     padding: 16px 32px;
     background-color:#5B35D5 ;
     margin-bottom: 100px;
+    display: inline-block;
 }
 
 }
+.buildgd{
+    background-color: #1B1734;
+    color: white;
+    h2{
+        font-size: 40px;
+        margin-top: 100px;
+        margin-top: 50px;
+    }
+
+}
+
+.four-card{
+   
+    padding: 15px;
+    background-color: #1B1734;
+    color: white;
+    .icon-module{
+        margin-top: 100px;
+        margin-bottom: 30px;
+        width: 20%;
+
+    }
+    h3{
+font-size: 20px;
+font-weight: 500d;
+    }
+    .paragraph-module{
+        color: #adaabf;
+    }
+    .arrowtext{
+        display: flex;
+        margin-bottom: 10px;
+        p{
+            color: #867df3;
+        }
+        .link-arrow{
+            margin-bottom: 14px;
+        }
+    }
+  
+}
+
+.start_blog{
+    // position: relative;
+    height: 1200px;
+    .tabs{
+        .bttn {
+            background-color: #322B5F;
+            margin-right: 10px;
+            padding: 16px 24px;
+            margin-bottom: 10px;
+    border-radius: 4px;
+}    
+.active{
+    background-color: transparent;
+    border: 1px solid #66E7D8;
+
+        }
+       .tabss{
+           display: flex;
+           flex-wrap: wrap;
+        a{
+            }
+       }
+    }
+}
+
+.cards_blog{
+    // background-color:#1B1734 ;
+    margin-top: 100px;
+    // position: absolute;
+    bottom: -100px;
+
+    .blog_cards{
+        margin-bottom: 50px;
+                
+                .img{
+                    position: relative;
+                    .img1-text{
+                        position: absolute;
+                        bottom: 20px;
+                        left: 30px;
+                        background-color: #5B35D5;
+                        
+                    }
+                    p{
+                    }
+                    .img_ss{
+                        width: 100%;
+                        border-top-left-radius:16px ;
+                        border-top-right-radius:16px ;
+                    }
+                }
+                .after_img{
+                    padding: 40px;
+                    background-color: #1B1734;
+                    color: #adaabf;
+        
+                    .homepage1{
+                        font-size: 23px;
+                        color: white;
+                    }
+                }
+            }
+
+.blog_part{
+    // position:absolute;
+    // visibility: hidden;
+    // opacity: -1;
+    display: none;
+}
+
+.active1{
+    // visibility: hidden;
+    display: block;
+
+}
+    
+}
+
+/////login///
+.login_start{
+    .left_side_login{
+        background-color: hsl(240, 40%, 98%);
+        padding: 0 100px;
+        text-align: center;
+        .login_logo{
+            
+            margin-top: 50px ;        
+        }
+        .p_first{
+            margin-top: 150px;
+            margin-bottom: 50px;
+            color: rgb(91, 85, 127);
+            font-size: 24px;
+            font-weight: 600;
+            padding: 0 60px;
+        }
+        .p_second{
+            color: rgb(132, 128, 159);
+            font-size: 16px;
+            font-weight: 600;
+            margin-bottom: 50px;
+
+        }
+        .svg_end{
+            margin-bottom: 9 0px;
+        }
+
+    }
+    .right_side{
+        margin-top: 160px;
+        padding-left:200px;
+        .text_top{
+            h1{
+                margin-bottom: 50px;
+                
+            }
+        }
+    }
+    input{
+        display: block;
+        width: 350px; 
+    padding: 8px 16px; 
+    border-radius: 4px; 
+    border: 1px solid;
+ }
+    .login_btn{
+        color: white;
+        margin-top: 25px;
+        background-color: #5B35D5;
+    }
+    a{
+        color:blue;
+        text-decoration-line: underline;
+    }
+    hr{
+        width: 60%;
+    }
+}
+
+
+
+
+
+
+
+
