--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -513,23 +513,23 @@ progress {
 
 @media (min-width: 576px) {
   .container, .container-sm {
-    max-width: 540px; } }
+    max-width: 670px; } }
 
 @media (min-width: 768px) {
   .container, .container-sm, .container-md {
-    max-width: 720px; } }
+    max-width: 970px; } }
 
 @media (min-width: 992px) {
   .container, .container-sm, .container-md, .container-lg {
-    max-width: 960px; } }
+    max-width: 1100px; } }
 
 @media (min-width: 1200px) {
   .container, .container-sm, .container-md, .container-lg, .container-xl {
-    max-width: 1140px; } }
+    max-width: 1300px; } }
 
 @media (min-width: 1400px) {
   .container, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
-    max-width: 1320px; } }
+    max-width: 1350px; } }
 
 .row {
   --bs-gutter-x: 1.5rem;
@@ -15472,96 +15472,97 @@ a {
 body {
   overflow-x: hidden; }
 
-nav {
-  height: 100px;
-  background-color: #0F0D1E;
-  position: fixed;
-  width: 100%; }
-  nav .right-side-nav {
+nav .nav {
+  height: 300px;
+  background-color: #0F0D1E; }
+  nav .nav .sd {
     display: flex;
-    align-items: center;
-    margin-top: 12px; }
-    nav .right-side-nav .links {
-      padding: 10px;
-      font-size: 12px; }
-    nav .right-side-nav .links ul {
-      display: flex;
-      align-items: center; }
-      nav .right-side-nav .links ul .a-hover:hover {
-        color: #322B5F; }
-      nav .right-side-nav .links ul .buttons a {
-        margin-right: 30px;
-        padding: 5px 0;
-        color: white;
-        text-decoration: none;
-        background-color: transparent; }
-        nav .right-side-nav .links ul .buttons a #sign-in {
-          border: 1px solid #322B5F; }
-      nav .right-side-nav .links ul li {
-        margin-right: 20px;
-        position: relative; }
-        nav .right-side-nav .links ul li ul {
+    justify-content: center; }
+    nav .nav .sd .left_side .img_logo {
+      width: 100%;
+      margin: 0 auto;
+      padding-top: 20px; }
+    nav .nav .sd .right_side {
+      padding-top: 35px;
+      padding-left: 90px; }
+      nav .nav .sd .right_side.activeburger {
+        transform: translateY(27%);
+        opacity: 1;
+        z-index: -1;
+        transition: transform 0.5s ease-in-out; }
+      @media screen and (max-width: 1000px) {
+        nav .nav .sd .right_side {
           position: absolute;
-          height: auto;
-          z-index: +1;
-          left: 0;
-          background-color: #f5f1f1;
-          display: none; }
-          nav .right-side-nav .links ul li ul li {
-            display: block;
-            width: 110px;
-            border-radius: 8px; }
-        nav .right-side-nav .links ul li a {
+          right: 0;
+          height: 100%;
+          transform: translateY(-100%);
+          transition: transform 0.5s ease-in-out;
+          background-color: red;
+          opacity: -1; } }
+      nav .nav .sd .right_side .links ul {
+        display: flex; }
+        @media screen and (max-width: 1000px) {
+          nav .nav .sd .right_side .links ul {
+            display: flex;
+            flex-direction: column; } }
+        nav .nav .sd .right_side .links ul .h_w1 {
+          margin-right: 15px; }
+        nav .nav .sd .right_side .links ul .sub_menu .ox {
           color: white;
-          text-decoration: none;
-          padding: 5px 0; }
-
-header {
-  position: relative;
-  background-color: #0F0D1E;
-  color: white; }
-  header .back-img {
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
-    width: 60%; }
-  header .book {
-    width: 100px;
-    height: 100px; }
-    header .book a {
-      text-decoration: none;
-      color: white;
-      padding: 16px 32px;
-      font-size: 17px;
-      background-color: #5B35D5;
-      border: 1px solid transparent;
-      border-radius: 8px; }
-  header .left-side {
-    margin-top: 90px; }
-    header .left-side h1, header .left-side .h1 {
-      font-weight: 600;
-      font-size: 36px; }
-    header .left-side .night40 {
-      margin-top: 16px;
-      font-size: 18px; }
-    header .left-side .trusted {
-      font-size: 14px;
-      color: #6e6c6c;
-      margin-top: 55px; }
-    header .left-side .img-left-logo {
-      display: inline-block;
-      vertical-align: middle;
-      border: 1px  transparent;
-      width: 60px;
-      height: 40px;
-      margin-right: 12px; }
-  header .right-side {
-    position: relative;
-    margin-top: 67px;
-    padding-left: 50px;
-    margin-bottom: 80px; }
-    header .right-side .img-right {
-      width: 100%; }
+          font-size: 40px;
+          margin-left: 5px; }
+        nav .nav .sd .right_side .links ul .sub_menu .dropdwn.h_w {
+          width: 150px;
+          height: 200px;
+          background-color: white;
+          position: relative;
+          margin: 0 auto; }
+          nav .nav .sd .right_side .links ul .sub_menu .dropdwn.h_w ul {
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            padding: 5px; }
+            nav .nav .sd .right_side .links ul .sub_menu .dropdwn.h_w ul li {
+              white-space: nowrap;
+              margin-bottom: 10px; }
+              nav .nav .sd .right_side .links ul .sub_menu .dropdwn.h_w ul li a {
+                color: red; }
+        nav .nav .sd .right_side .links ul .sub_menu {
+          margin-right: 15px; }
+        nav .nav .sd .right_side .links ul li {
+          width: 13%;
+          font-size: 16px;
+          margin-right: 15px;
+          white-space: nowrap; }
+          @media screen and (max-width: 1000px) {
+            nav .nav .sd .right_side .links ul li {
+              margin-bottom: 10px; } }
+          nav .nav .sd .right_side .links ul li a {
+            color: white; }
+        @media screen and (max-width: 1000px) {
+          nav .nav .sd .right_side .links ul .buttons_nav {
+            margin: 0 auto; } }
+        nav .nav .sd .right_side .links ul .buttons_nav .log_in_nav {
+          margin-right: 10px;
+          padding: 12px 19px;
+          border-radius: 6px;
+          border: 1px solid #66E7D8;
+          white-space: nowrap;
+          width: 50%; }
+        nav .nav .sd .right_side .links ul .buttons_nav .book-demo_nav {
+          padding: 15px 24px;
+          border-radius: 4px;
+          background-color: #5B35D5;
+          white-space: nowrap;
+          width: 50%; }
+    nav .nav .sd .burger_svg {
+      display: none; }
+      @media screen and (max-width: 1000px) {
+        nav .nav .sd .burger_svg {
+          display: block;
+          text-align: end;
+          padding-top: 30px;
+          margin-right: 100px; } }
 
 .section-2 {
   background-color: #1B1734;
@@ -15930,18 +15931,23 @@ footer {
     .four-card .arrowtext .link-arrow {
       margin-bottom: 14px; }
 
-.start_blog {
-  height: 1200px; }
+.start_blog .tex_p {
+  padding: 0 200px; }
+
+.start_blog .tabs {
+  padding: 0 160px; }
   .start_blog .tabs .bttn {
     background-color: #322B5F;
     margin-right: 10px;
     padding: 16px 24px;
     margin-bottom: 10px;
     border-radius: 4px; }
-  .start_blog .tabs .active {
+  .start_blog .tabs .active2 {
     background-color: transparent;
     border: 1px solid #66E7D8; }
   .start_blog .tabs .tabss {
+    margin-top: 40px;
+    padding: 0 40px;
     display: flex;
     flex-wrap: wrap; }
 
