--- a/assets/sass/pages/_index.scss
+++ b/assets/sass/pages/_index.scss
@@ -10,166 +10,314 @@ body{
     overflow-x: hidden;
 }
 
-nav{
-    height:100px;
-    background-color:#0F0D1E ;
-    // z-index: -1;
-    position: fixed;
-    width: 100%;
+// nav{
+//     height:100px;
+//     background-color:#0F0D1E ;
+//     // z-index: -1;
+//     position: fixed;
+//     width: 100%;
     
 
-    .right-side-nav{
+//     .right-side-nav{
     
-        display: flex;
-        align-items: center;
-        margin-top: 12px;
-        .links {
-            padding:10px;
-            font-size: 12px;
-        }
+//         display: flex;
+//         align-items: center;
+//         margin-top: 12px;
+//         .links {
+//             padding:10px;
+//             font-size: 12px;
+//         }
 
-        .links ul {
-            display: flex;
-            align-items: center;
+//         .links ul {
+//             display: flex;
+//             align-items: center;
 
            
                
-               .a-hover:hover{
-                   color: #322B5F;
-               }
+//                .a-hover:hover{
+//                    color: #322B5F;
+//                }
         
             
-            .buttons{
-                a {
-                    margin-right: 30px;
-                    padding: 5px 0; 
-                    color: white;
-                    text-decoration: none;
-                    background-color: transparent;
-                    #sign-in {
-                        border: 1px solid #322B5F;
+//             .buttons{
+//                 a {
+//                     margin-right: 30px;
+//                     padding: 5px 0; 
+//                     color: white;
+//                     text-decoration: none;
+//                     background-color: transparent;
+//                     #sign-in {
+//                         border: 1px solid #322B5F;
 
-                    }
-                }
+//                     }
+//                 }
+//             }
+
+//             li{
+//                 margin-right: 20px;
+//                 position:relative;
+//                 // &:hover ul{
+//                 //     display: block;
+//                 //     border-radius: 8px;
+//                 //     height: 1000px
+//                 //     li{
+//                 //         margin-bottom: 10px;
+//                 //         height: 1000px;
+//                 //     }
+//                 //     a{
+//                 //         color: black;
+//                 //         display: inline-block;
+//                 //     }
+//                 // }
+//                 ul{
+//                     position:absolute;
+//                     height: auto;
+//                     z-index: +1;
+//                     left: 0;
+//                     background-color: rgb(245, 241, 241);
+//                     display: none;
+//                     li{
+//                         display: block;
+//                         width: 110px;
+//                         border-radius: 8px;
+                        
+//                     }
+//                 }
+               
+//                 a{
+//                     color: white;
+//                     text-decoration: none;
+//                     padding: 5px 0;
+//                     // &:hover{
+//                     //     background-color:#322B5F ;
+//                     // }
+//                 }
+
+//     }
+//         }
+//     }
+// }
+
+nav{
+    // display: flex;
+    .nav{
+
+        height: 300px;
+    background-color:#0F0D1E ;
+
+     .sd{
+
+        display: flex;
+        justify-content: center;
+        
+        .left_side{
+            // width: 100%;
+            
+            .img_logo{
+                width: 100%;
+                margin: 0 auto;
+                padding-top: 20px;
             }
-
-            li{
-                margin-right: 20px;
-                position:relative;
-                // &:hover ul{
-                //     display: block;
-                //     border-radius: 8px;
-                //     height: 1000px
-                //     li{
-                //         margin-bottom: 10px;
-                //         height: 1000px;
-                //     }
-                //     a{
-                //         color: black;
-                //         display: inline-block;
-                //     }
-                // }
+        }
+        .right_side{
+            padding-top: 35px;
+            &.activeburger{
+                transform: translateY(27%);
+                opacity: 1;
+                z-index: -1;
+                transition: transform 0.5s ease-in-out;
+            }
+            padding-left: 90px;
+            @media screen and (max-width:1000px) {
+                position: absolute;
+                right: 0;
+                // top: 100%;
+                height:100%;
+                transform: translateY(-100%);
+                transition: transform 0.5s ease-in-out;
+                background-color: red;
+                opacity: -1;
+            }
+            .links{
                 ul{
-                    position:absolute;
-                    height: auto;
-                    z-index: +1;
-                    left: 0;
-                    background-color: rgb(245, 241, 241);
-                    display: none;
+                    @media screen and (max-width:1000px) {
+                        display: flex;
+                        flex-direction: column;
+                    }
+                    .h_w1{
+                        margin-right: 15px;
+                    }
+                    .sub_menu{
+                        .ox{
+                            color: white;
+                            font-size: 40px;
+                            margin-left: 5px;
+                        }
+                        .dropdwn.h_w{
+                            width: 150px;
+                            height: 200px;
+                            background-color: white;
+                            position: relative;
+                            margin: 0 auto;
+                            ul{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    li{
+
+        white-space: nowrap;
+        margin-bottom: 10px;
+        a{
+            color: red;
+        }
+    }
+}
+                        }
+                    }
+                    
+                    display: flex;
+                    .sub_menu{
+                        margin-right: 15px;
+                    }
                     li{
-                        display: block;
-                        width: 110px;
-                        border-radius: 8px;
+                        width: 13%;
+                        font-size: 16px;
+                        margin-right: 15px;
+                        white-space: nowrap;
+                        @media screen and (max-width:1000px) {
+                            margin-bottom: 10px;
+                        }
+                            a{
+                        color: rgb(255, 255, 255);
+
+                            }
+                    }
+                    .buttons_nav{
+                        @media screen and (max-width:1000px) {
+                           margin: 0 auto;
+                        }
+                        .log_in_nav{
+                            margin-right: 10px;
+                            padding:12px 19px;
+                            border-radius: 6px;
+                            border: 1px solid #66E7D8;
+                            white-space: nowrap;
+                            width: 50%;
+
+                        }
+                        .book-demo_nav{
+                            padding: 15px 24px;
+                            border-radius: 4px;
+                            background-color: #5B35D5;
+                            white-space: nowrap;
+                            width: 50%;
+
+                            
+                        }
+                      
                         
                     }
                 }
-               
-                a{
-                    color: white;
-                    text-decoration: none;
-                    padding: 5px 0;
-                    // &:hover{
-                    //     background-color:#322B5F ;
-                    // }
-                }
-
-    }
-        }
-    }
-}
-
-header{
-    
-    position: relative;
-    
-        .back-img{
-            position: absolute;
-            bottom: 0px;
-            right: 0px;
-            width: 60%;
-        }
-        .book{
-            width: 100px;
-            height: 100px;
-           
-            a{
-                text-decoration: none;
-                color: white;
-                padding: 16px 32px;
-                font-size: 17px;
-                background-color: #5B35D5;
-                border: 1px solid transparent;
-                border-radius: 8px;
             }
         }
-    
-    background-color: #0F0D1E;
-    color: white;
-    .left-side{
-        
-        margin-top: 90px;
-        h1{
-            font-weight: 600;
-            font-size: 36px;
-        }
-        .night40{
-            margin-top:16px;
-            font-size: 18px;
-        }
-        .trusted{
-            font-size: 14px;
-            color:rgb(110, 108, 108) ;
-            margin-top: 55px;
-        }
-        .img-left-logo{
-         display: inline-block;
-         vertical-align: middle;
-         border: 1px  transparent;
-            
-            width: 60px;
-            height:40px ;
-            margin-right: 12px;
-        }
-    }
-    .right-side{
-        position: relative;
-        margin-top: 67px;
-        padding-left: 50px;
-        margin-bottom: 80px;
-      .img-right{
-          width: 100%;
+        .burger_svg{
+            display: none;
+            @media screen and (max-width:1000px) {
+                display: block;
+                text-align: end;
+            padding-top:30px;
+            margin-right: 100px;
+            }
+            .svg_br{
 
-        //   .back-img{
-        //     //   background-image: url(".//");
-        //       position: absolute;
-        //       bottom: px;
-        //     //   z-index: -1;
-        //     //   opacity: -1;
-        //   }
-      }
+            }
+        }
+     }
     }
-
 }
+
+// .right-side.activeburger{
+//     transform: translateY(150%);
+//     background-color: #66E7D8;
+// opacity: 1;
+// }
+
+
+
+
+// header{
+    
+//     position: relative;
+    
+//         .back-img{
+//             position: absolute;
+//             bottom: 0px;
+//             right: 0px;
+//             width: 60%;
+//         }
+//         .book{
+//             width: 100px;
+//             height: 100px;
+           
+//             a{
+//                 text-decoration: none;
+//                 color: white;
+//                 padding: 16px 32px;
+//                 font-size: 17px;
+//                 background-color: #5B35D5;
+//                 border: 1px solid transparent;
+//                 border-radius: 8px;
+//             }
+//         }
+    
+//     background-color: #0F0D1E;
+//     color: white;
+//     .left-side{
+        
+//         margin-top: 90px;
+//         h1{
+//             font-weight: 600;
+//             font-size: 36px;
+//         }
+//         .night40{
+//             margin-top:16px;
+//             font-size: 18px;
+//         }
+//         .trusted{
+//             font-size: 14px;
+//             color:rgb(110, 108, 108) ;
+//             margin-top: 55px;
+//         }
+//         .img-left-logo{
+//          display: inline-block;
+//          vertical-align: middle;
+//          border: 1px  transparent;
+            
+//             width: 60px;
+//             height:40px ;
+//             margin-right: 12px;
+//         }
+//     }
+//     .right-side{
+//         position: relative;
+//         margin-top: 67px;
+//         padding-left: 50px;
+//         margin-bottom: 80px;
+//       .img-right{
+//           width: 100%;
+
+//         //   .back-img{
+//         //     //   background-image: url(".//");
+//         //       position: absolute;
+//         //       bottom: px;
+//         //     //   z-index: -1;
+//         //     //   opacity: -1;
+//         //   }
+//       }
+//     }
+
+// }
 
 .section-2{
     background-color:#1B1734;
@@ -472,29 +620,6 @@ footer{
 }
 
 
-// .global_payroll{
-//     background-color: #0F0D1E;
-//     .sd{
-        
-//         background-color: yellow;
-//         color:black;
-//         a{
-//             color: black;
-//         }
-//         .sdb{
-//             .subpage{
-//            color: red;
-
-//             }
-//             .book{
-//                 a{
-//                     border-radius: 4px;
-//                 }
-//             }
-//         }
-//     }
-// }
-// ////////GP////////
 .global_payroll{
     background-color: #0F0D1E;
     .sd{
@@ -730,8 +855,13 @@ font-weight: 500d;
 
 .start_blog{
     // position: relative;
-    height: 1200px;
+    // height: 1200px;
+    .tex_p{
+        padding: 0 200px;
+    }
     .tabs{
+
+        padding: 0 160px;
         .bttn {
             background-color: #322B5F;
             margin-right: 10px;
@@ -739,12 +869,14 @@ font-weight: 500d;
             margin-bottom: 10px;
     border-radius: 4px;
 }    
-.active{
+.active2{
     background-color: transparent;
     border: 1px solid #66E7D8;
 
         }
        .tabss{
+           margin-top: 40px;
+           padding: 0 40px;
            display: flex;
            flex-wrap: wrap;
         a{
