--- a/assets/sass/pages/_index.scss
+++ b/assets/sass/pages/_index.scss
@@ -102,7 +102,7 @@ nav{
     // display: flex;
     .nav{
 
-        height: 300px;
+        height: 96px;
     background-color:#0F0D1E ;
 
      .sd{
@@ -120,14 +120,14 @@ nav{
             }
         }
         .right_side{
-            padding-top: 35px;
+            // padding-top: 35px;
             &.activeburger{
                 transform: translateY(27%);
                 opacity: 1;
                 z-index: -1;
                 transition: transform 0.5s ease-in-out;
             }
-            padding-left: 90px;
+            // padding-left: 90px;
             @media screen and (max-width:1000px) {
                 position: absolute;
                 right: 0;
@@ -139,57 +139,139 @@ nav{
                 opacity: -1;
             }
             .links{
-                ul{
+                .links_ul{
+                    .sub_menu.links_ul_li.resc{
+                        
+                        .dropdwn12.resource{
+                            position: relative;
+                            margin: 0 auto;
+                            visibility: hidden;
+                            transform: translateY(-100%);
+                            transition: transform 0.5s ease-in-out;
+                            .res_ul{
+                                .p_resc{
+                                    margin-top: 5px;
+                                    margin-bottom: 10px;
+                                    color: #0f0d1e;
+                                    font-size: 18px;
+                                    line-height: 26px;
+                                    font-weight: 600;
+                                }
+                                background-color: rgb(209, 223, 195);
+                                border-radius: 8px;
+                                position: absolute;
+                                display: flex;
+                                flex-direction: column;
+                                overflow-y:scroll;
+                                max-height: 400px;
+                                padding-left: 10px;
+                                padding-top: 20px;
+                                margin-top: 25px;
+                                margin-left: -20px;
+
+                                .a-hover{
+                                    margin-bottom: -14px;
+                                    color: #0f0d1e;
+                                    font-size: 18px;
+                                    line-height: 26px;
+                                    font-weight: 600;
+                                }
+                                .res_ul_li{
+                                    padding-right: 40px;
+                                    margin-bottom: 10px;
+                                    margin-left: 15px;
+                                    .a-hover{
+                                        color:#222;
+                                        // margin-top: 5px;
+                                        font-weight: normal;
+                                    }
+                                }
+                                
+                            }
+                        }
+                    }
                     @media screen and (max-width:1000px) {
                         display: flex;
                         flex-direction: column;
                     }
                     .h_w1{
-                        margin-right: 15px;
+                        // margin-right: 15px;
+                        margin-left: 44px;
                     }
                     .sub_menu{
+                        // padding:15px;
                         .ox{
                             color: white;
                             font-size: 40px;
                             margin-left: 5px;
                         }
-                        .dropdwn.h_w{
-                            width: 150px;
-                            height: 200px;
-                            background-color: white;
+                        .dropdwn12.h_w123{
+                            // width: 150px;
+                            // height: 200px;
+                            // background-color: white;
                             position: relative;
                             margin: 0 auto;
-                            ul{
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-    li{
+                            visibility: hidden;
+                            // transform: translateY(0);
+                            transition: transform 0.5s ease-in-out;
+                            .hw_ul{
+                                   background-color: rgb(209, 223, 195);
+                                   border-radius: 8px;
+                                   position: absolute;
+                                   display: flex;
+                                   flex-direction: column;
+                                   padding: 40px;
+                                   margin-top: 25px;
+                                   margin-left: -20px;
 
-        white-space: nowrap;
-        margin-bottom: 10px;
-        a{
-            color: red;
-        }
-    }
+                         .hw_ul_li{
+                                white-space: nowrap;
+                                   margin-bottom: 12px;
+                                   font-size: 16px;
+                                //    margin-left: ;
+                                  a{
+                                         color:black;
+                                         &:hover{
+                                             color: #867df3;
+                                         }
+                                      }
+                                }
 }
                         }
+                     
                     }
                     
                     display: flex;
-                    .sub_menu{
-                        margin-right: 15px;
+                   
+                    .sub_men3{
+                        // padding: 20px;
+                        margin-top: 10px;
+                        margin-right: 10px;
+
                     }
-                    li{
-                        width: 13%;
+                    .links_ul_li{
+                        // width: 13%;
+                        margin-top: 20px;
                         font-size: 16px;
-                        margin-right: 15px;
+                        display: inline-block;
+                        margin-right: 22px;
                         white-space: nowrap;
+                        padding: 15px;
+                        cursor: pointer;
+                        &:hover{
+                            background-color:#1B1734;
+                            border-radius: 4px;
+                            cursor: pointer;
+                        }
+                        
+
                         @media screen and (max-width:1000px) {
                             margin-bottom: 10px;
                         }
                             a{
-                        color: rgb(255, 255, 255);
+                        &:hover{
+                            color: white;
+                        }
 
                             }
                     }
@@ -198,22 +280,35 @@ nav{
                            margin: 0 auto;
                         }
                         .log_in_nav{
+                            cursor: pointer;
                             margin-right: 10px;
-                            padding:12px 19px;
-                            border-radius: 6px;
-                            border: 1px solid #66E7D8;
+                            padding:12px 24px;
+                            border-radius: 4px;
+                            margin-top: 24px;
+                            border: 3px solid #322b5f;
                             white-space: nowrap;
-                            width: 50%;
+                            display: inline-block;
+                            
+                                &:hover{
+                                    color: white;
+                                    background-color:#322b5f54 ;
+                                }
+                        
 
                         }
                         .book-demo_nav{
-                            padding: 15px 24px;
+                            display: inline-block;
+                            cursor: pointer;
+                            padding: 15px 26px;
                             border-radius: 4px;
                             background-color: #5B35D5;
                             white-space: nowrap;
-                            width: 50%;
-
-                            
+                         
+                             &:hover{
+                                 color: white;
+                                 background-color:#5a3dbb ;
+                             }
+                         
                         }
                       
                         
@@ -237,11 +332,26 @@ nav{
     }
 }
 
-// .right-side.activeburger{
-//     transform: translateY(150%);
-//     background-color: #66E7D8;
-// opacity: 1;
+.right-side.activeburger{
+    transform: translateY(150%);
+    background-color: #66E7D8;
+opacity: 1;
+}
+
+
+// .dropdwn12.resource.active7{
+//     // opacity: 1;
+//     visibility: visible;
+//     // transform: translateY(0);
+//     transition: transform 0.5s ease-in-out;
 // }
+.active7{
+    visibility: visible!important;
+
+    transform: translateY(0);
+    transition: transform 0.5s ease-in-out;
+    
+}
 
 
 
