--- a/assets/sass/pages/_index.scss
+++ b/assets/sass/pages/_index.scss
@@ -323,6 +323,8 @@ nav{
                 text-align: end;
             padding-top:30px;
             margin-right: 100px;
+            position: relative;
+            z-index: 1;
             }
             .svg_br{
 
